Remove double escaping on Github Slack notification message
Hoping this resolves an error where new lines are being inserted into
the payload, rather than an escaped new line.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -33,7 +33,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Tests and build started for commits:\n\n• ${{ join(github.event.commits.*.message, '\\n•') }}"
+                    "text": "Tests and build started for commits:\n\n• ${{ join(github.event.commits.*.message, '\n•') }}"
                   },
                   "accessory": {
                     "type": "button",
