--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -14,6 +14,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/github-script@v5.0.0
+        name: Get commit messages
+        id: get-commit-messages
+        with:
+          script: return ["One", "Two", "Three"]
+          # result-encoding: string
+
+      - name: Print commits
+        run: echo "${{ join(steps.get-commit-messages.outputs.result, ',') }}"
+
+      - name: Print commits
+        run: echo "${{ steps.get-commit-messages.outputs.result }}"
+
       - uses: slackapi/slack-github-action@v1.16.0
         name: Post starting to Slack
         with:
