Remove extraneous characters from Slack notification
This test line should not be in the notification.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -106,7 +106,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Tests and build started for commits:\n\n• ${{ join(fromJSON(steps.get-commit-messages-strings-actual.outputs.result), '\n•') }} }}"
+                    "text": "Tests and build started for commits:\n\n• ${{ join(fromJSON(steps.get-commit-messages-strings-actual.outputs.result), '\n•') }}"
                   },
                   "accessory": {
                     "type": "button",
