Add extra emoji to Slack tests passed message
This test line should not be in the notification.

--- a/.github/workflows/matt-fyi-cd.yml
+++ b/.github/workflows/matt-fyi-cd.yml
@@ -270,7 +270,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Tests passed and build complete. Deploying..."
+                    "text": "✔ Tests passed and build complete. Deploying..."
                   }
                 }
               ]
